[gd_scene load_steps=5 format=1]

[ext_resource path="res://Scripts/Tools/door_tool.gd" type="Script" id=1]
[ext_resource path="res://Images/UI/Door_triangle.png" type="Texture" id=2]
[ext_resource path="res://Images/Tools/tools_door.tex" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 32, 32 )

[node name="Tool_Door" type="Node2D"]

transform/pos = Vector2( 219.736, 132.919 )
transform/scale = Vector2( 2.83315, 2.83315 )
script/script = ExtResource( 1 )

[node name="Colliision" type="Area2D" parent="."]

input/pickable = true
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="Shape" type="CollisionShape2D" parent="Colliision"]

shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="Triangle" type="Sprite" parent="."]

visibility/visible = false
transform/pos = Vector2( 0, -80 )
transform/scale = Vector2( 0.246764, 0.246764 )
texture = ExtResource( 2 )

[node name="DebugI" type="Sprite" parent="."]

transform/pos = Vector2( 0, -0.222387 )
transform/scale = Vector2( 1, 0.498612 )
texture = ExtResource( 3 )
modulate = Color( 1, 1, 1, 0.752941 )
region = true
region_rect = Rect2( 0, 0, 64, 128 )

[connection signal="body_enter" from="Colliision" to="." method="_on_body_enter"]

[connection signal="body_exit" from="Colliision" to="." method="_on_body_exit"]


